fixed text alignment

--- a/client/src/components/ContactImg/ContactCSS.css
+++ b/client/src/components/ContactImg/ContactCSS.css
@@ -27,7 +27,6 @@
 }
 
 .allRows {
-  margin-right: 50px;
   margin-top: 80px;
   text-align: center;
 }
